[apache/helix] -- Updated Maps.of to Sets.of for Java-8 build complaince